--- a/Invictus/package.json
+++ b/Invictus/package.json
@@ -27,7 +27,12 @@
     "@capacitor/keyboard": "5.0.6",
     "@capacitor/status-bar": "5.0.6",
     "@ionic/angular": "^7.0.0",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "expressjs": "^1.0.1",
     "ionicons": "^7.0.0",
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
