--- a/Invictus/package.json
+++ b/Invictus/package.json
@@ -33,6 +33,7 @@
     "express-session": "^1.17.3",
     "expressjs": "^1.0.1",
     "ionicons": "^7.0.0",
+    "moment": "^2.29.4",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
@@ -53,6 +54,7 @@
     "@capacitor/cli": "5.5.0",
     "@ionic/angular-toolkit": "^9.0.0",
     "@types/jasmine": "~4.3.0",
+    "@types/moment": "^2.13.0",
     "@types/node": "^12.11.1",
     "@typescript-eslint/eslint-plugin": "5.3.0",
     "@typescript-eslint/parser": "5.3.0",
