--- a/Invictus/package.json
+++ b/Invictus/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.29.4",
     "mongodb": "^6.2.0",
     "mongoose": "^8.0.0",
+    "ng2-charts": "^5.0.4",
     "nodemon": "^3.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
