--- a/Invictus/package.json
+++ b/Invictus/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "^17.0.7",
     "@angular/router": "^17.0.7",
     "@auth0/auth0-angular": "^2.2.1",
+    "@capacitor/android": "^6.0.0",
     "@capacitor/app": "5.0.6",
     "@capacitor/core": "5.5.0",
     "@capacitor/haptics": "5.0.6",
