New commit for heroku so it will build automatically

--- a/Invictus/ionic.config.json
+++ b/Invictus/ionic.config.json
@@ -1,7 +1,8 @@
 {
   "name": "Invictus",
   "integrations": {
-    "capacitor": {}
+    "capacitor": {},
+    "cordova": {}
   },
   "type": "angular"
 }
