--- a/package.json
+++ b/package.json
@@ -4,5 +4,10 @@
     "bootstrap": "^5.3.3",
     "moment-timezone": "^0.5.45",
     "node-cron": "^3.0.3"
+  },
+    "scripts": {
+      "start": "node server.js"
   }
 }
+
+
