changed the path for package.json and procfile

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node-cron": "^3.0.3"
   },
     "scripts": {
-      "start": "node server.js"
+      "start": "node Invictus/server/server.js"
   }
 }
 
