--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "@auth0/auth0-angular": "^2.2.1",
     "bootstrap": "^5.3.3",
     "moment-timezone": "^0.5.45",
-    "node-cron": "^3.0.3"
+    "node-cron": "^3.0.3",
+    "express": "^4.18.2"
   },
     "scripts": {
       "start": "node Invictus/server/server.js"
