--- a/package.json
+++ b/package.json
@@ -1,10 +1,36 @@
 {
   "dependencies": {
+    "@angular/animations": "^17.0.7",
+    "@angular/common": "^17.0.7",
+    "@angular/compiler": "^17.0.7",
+    "@angular/core": "^17.0.7",
+    "@angular/forms": "^17.0.7",
+    "@angular/platform-browser": "^17.0.7",
+    "@angular/platform-browser-dynamic": "^17.0.7",
+    "@angular/router": "^17.0.7",
     "@auth0/auth0-angular": "^2.2.1",
-    "bootstrap": "^5.3.3",
-    "moment-timezone": "^0.5.45",
-    "node-cron": "^3.0.3",
-    "express": "^4.18.2"
+    "@capacitor/android": "^6.0.0",
+    "@capacitor/app": "5.0.6",
+    "@capacitor/core": "5.5.0",
+    "@capacitor/haptics": "5.0.6",
+    "@capacitor/keyboard": "5.0.6",
+    "@capacitor/status-bar": "5.0.6",
+    "@ionic/angular": "^7.0.0",
+    "@ionic/storage-angular": "^4.0.0",
+    "chart.js": "^4.4.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "expressjs": "^1.0.1",
+    "ionicons": "^7.0.0",
+    "moment": "^2.29.4",
+    "mongodb": "^6.2.0",
+    "mongoose": "^8.0.0",
+    "ng2-charts": "^5.0.4",
+    "nodemon": "^3.0.1",
+    "rxjs": "~7.8.0",
+    "tslib": "^2.3.0",
+    "zone.js": "~0.14.2"
   },
     "scripts": {
       "start": "node Invictus/server/server.js"
