--- a/package.json
+++ b/package.json
@@ -1,20 +1,9 @@
 {
   "dependencies": {
-    "@angular/animations": "^17.0.7",
-    "@angular/common": "^17.0.7",
-    "@angular/compiler": "^17.0.7",
-    "@angular/core": "^17.0.7",
-    "@angular/forms": "^17.0.7",
-    "@angular/platform-browser": "^17.0.7",
-    "@angular/platform-browser-dynamic": "^17.0.7",
-    "@angular/router": "^17.0.7",
     "@auth0/auth0-angular": "^2.2.1",
-    "@capacitor/app": "5.0.6",
-    "@capacitor/haptics": "5.0.6",
-    "@capacitor/keyboard": "5.0.6",
-    "@capacitor/status-bar": "5.0.6",
-    "@ionic/angular": "^7.0.0",
-    "@ionic/storage-angular": "^4.0.0",
+    "bootstrap": "^5.3.3",
+    "moment-timezone": "^0.5.45",
+    "node-cron": "^3.0.3",
     "chart.js": "^4.4.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
